tests/baselines/reference/parserIndexMemberDeclaration5.errors.txt
parserIndexMemberDeclaration5.ts(2,24): error TS1005: ';' expected.
parserIndexMemberDeclaration5.ts(2,31): error TS2564: Property 'v' has no initializer and is not definitely assigned in the constructor.


==== parserIndexMemberDeclaration5.ts (2 errors) ====
    class C {
       [a: string]: number public v: number
                           ~~~~~~
!!! error TS1005: ';' expected.
                                  ~
!!! error TS2564: Property 'v' has no initializer and is not definitely assigned in the constructor.
    }